--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -30,4 +30,7 @@
         "editor.defaultFormatter": "vscode.json-language-features"
     },
     "diffEditor.renderSideBySide": false,
+    "chat.tools.terminal.autoApprove": {
+        "upower": true
+    },
 }
